combat-sports-events/src/assets/base.css
/* oswald-200 - latin */
@font-face {
  font-display: swap;
  font-family: 'Oswald';
  font-style: normal;
  font-weight: 200;
  src: url('/fonts/oswald-v53-latin-200.woff2') format('woff2');
}

/* oswald-300 - latin */
@font-face {
  font-display: swap;
  font-family: 'Oswald';
  font-style: normal;
  font-weight: 300;
  src: url('/fonts/oswald-v53-latin-300.woff2') format('woff2');
}

/* oswald-regular - latin */
@font-face {
  font-display: swap;
  font-family: 'Oswald';
  font-style: normal;
  font-weight: 400;
  src: url('/fonts/oswald-v53-latin-regular.woff2') format('woff2');
}

/* oswald-500 - latin */
@font-face {
  font-display: swap;
  font-family: 'Oswald';
  font-style: normal;
  font-weight: 500;
  src: url('/fonts/oswald-v53-latin-500.woff2') format('woff2');
}

/* oswald-600 - latin */
@font-face {
  font-display: swap;
  font-family: 'Oswald';
  font-style: normal;
  font-weight: 600;
  src: url('/fonts/oswald-v53-latin-600.woff2') format('woff2');
}

/* oswald-700 - latin */
@font-face {
  font-display: swap;
  font-family: 'Oswald';
  font-style: normal;
  font-weight: 700;
  src: url('/fonts/oswald-v53-latin-700.woff2') format('woff2');
}

@font-face {
  font-display: swap;
  font-family: 'UFC';
  font-style: normal;
  src: url('/fonts/dream-mma.woff2') format('woff2');
}

@font-face {
  font-display: swap;
  font-family: 'GLORY';
  font-style: normal;
  src: url('/fonts/good-timing.woff2') format('woff2');
}

@font-face {
  font-display: swap;
  font-family: 'ONE';
  font-style: normal;
  src: url('/fonts/tt-bricks-extrabold-italic.woff2') format('woff2');
}

/* color palette from <https://github.com/vuejs/theme> */
:root {
  --vt-c-white: #ffffff;
  --vt-c-white-soft: #f8f8f8;
  --vt-c-white-mute: #f2f2f2;

  --vt-c-black: #181818;
  --vt-c-black-soft: #222222;
  --vt-c-black-mute: #282828;

  --vt-c-indigo: #2c3e50;

  --vt-c-divider-light-1: rgba(60, 60, 60, 0.29);
  --vt-c-divider-light-2: rgba(60, 60, 60, 0.12);
  --vt-c-divider-dark-1: rgba(84, 84, 84, 0.65);
  --vt-c-divider-dark-2: rgba(84, 84, 84, 0.48);

  --vt-c-text-light-1: var(--vt-c-indigo);
  --vt-c-text-light-2: rgba(60, 60, 60, 0.66);
  --vt-c-text-dark-1: var(--vt-c-white);
  --vt-c-text-dark-2: rgba(235, 235, 235, 0.64);
}

/* semantic color variables for this project */
:root {
  --color-background: var(--vt-c-white);
  --color-background-soft: var(--vt-c-white-soft);
  --color-background-mute: var(--vt-c-white-mute);

  --color-border: var(--vt-c-divider-light-2);
  --color-border-hover: var(--vt-c-divider-light-1);

  --color-heading: var(--vt-c-text-light-1);
  --color-text: var(--vt-c-text-light-1);

  --section-gap: 160px;
}

@media (prefers-color-scheme: dark) {
  :root {
    --color-background: var(--vt-c-black);
    --color-background-soft: var(--vt-c-black-soft);
    --color-background-mute: var(--vt-c-black-mute);

    --color-border: var(--vt-c-divider-dark-2);
    --color-border-hover: var(--vt-c-divider-dark-1);

    --color-heading: var(--vt-c-text-dark-1);
    --color-text: var(--vt-c-text-dark-2);
  }
}

*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  font-weight: normal;
}

body {
  min-height: 100vh;
  color: var(--color-text);
  /* background: var(--color-background); */
  background: url('/images/boxing-ring.webp');
  background-size: cover;
  background-color: rgba(90, 133, 215, 0.4);
  background-blend-mode: multiply;
  background-attachment: fixed;
  background-position: center;
  transition:
    color 0.5s,
    background-color 0.5s;
  line-height: 1.6;
  font-family: "Oswald", sans-serif;
  font-size: calc(15px + 0.25vw);
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

@media (max-width: 475px) {
  body {
    font-size: 12px;
  }
  div.popover_container button {
    font-size: 12px;
  }
}

